--- a/.github/workflows/github-actions-start.yml
+++ b/.github/workflows/github-actions-start.yml
@@ -1,10 +1,6 @@
 name: GitHub Actions Start
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: [push]
 
 jobs:
   build-and-test:
