--- a/.github/workflows/github-actions-start.yml
+++ b/.github/workflows/github-actions-start.yml
@@ -1,5 +1,5 @@
 name: GitHub Actions Start
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+run-name: ${{ github.actor }} start actions
 on: [push]
 
 jobs:
